@@ -5,7 +5,7 @@ from __future__ import absolute_import, unicode_literals
 
 import os
 
-VERSION = (3, 1, 0)
+VERSION = (3, 1, 1)
 __version__ = '.'.join(map(str, VERSION[0:3])) + ''.join(VERSION[3:])
 __author__ = 'Ask Solem'
 __contact__ = 'ask@celeryproject.org'
