@@ -1,5 +1,7 @@
 from __future__ import absolute_import, unicode_literals
 
+import warnings
+
 from django.conf import settings
 
 from celery.registry import tasks
@@ -21,10 +23,13 @@ class TestDiscovery(unittest.TestCase):
             self.assertDiscovery()
 
     def test_discovery_with_broken(self):
+        warnings.resetwarnings()
         if 'someapp' in settings.INSTALLED_APPS:
             installed_apps = list(settings.INSTALLED_APPS)
             settings.INSTALLED_APPS = installed_apps + ['xxxnot.aexist']
             try:
-                self.assertRaises(ImportError, autodiscover)
+                with warnings.catch_warnings(record=True) as log:
+                    autodiscover()
+                    self.assertTrue(log)
             finally:
                 settings.INSTALLED_APPS = installed_apps
